--- a/assignment/index.html
+++ b/assignment/index.html
@@ -22,4 +22,4 @@
     <link rel="stylesheet" href="../test/test.styles.css" />
     <script src="../test/test.js"></script>
   </body>
-</html>
+</html>g
